# django-blog-web-app

./: .gitignore  .prettierrc  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_comment_count.py  0002_initial.py
blog/templates/blog/: create-edit.html  detail.html  index.html  search-advanced.html
blog/templates/components/: blog-card.html  blog-input-field.html  blog-section-form.html  comment.html  search-field-options.html  tab.html
config/: context_processors.py  manager.py  settings.py  urls.py  utils.py
config/static/js/: autosize.js  htmxConfig.js
config/templates/components/: button.html  header.html  loader.html  message.html
config/templates/layouts/: auth-layout.html  home-layout.html  main-layout.html  profile-layout.html
interaction/: admin.py  forms.py  models.py  urls.py  views.py
interaction/migrations/: 0001_initial.py  0002_comment_like_count_comment_liked_by.py  0002_initial.py
interaction/templates/interaction/: comment-form.html  comment.html  follow.html  like.html  save.html
main/: settings.py  urls.py  wsgi.py
main/static/js/: alpine.js  htmxConfig.js  previewImage.js  showPassword.js
notification/: apps.py  models.py  signals.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_initial.py
user/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
user/migrations/: 0001_initial.py  0002_follow_unique_follow.py
(+27 files in other folders)
